--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@supabase/supabase-js": "^2.87.1",
     "@tailwindcss/vite": "^4.1.18",
     "@types/qrcode.react": "^1.0.5",
+    "@vercel/analytics": "^1.6.1",
     "autoprefixer": "^10.4.22",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
