fix: Enhance game connection and error handling, add stress test script, and update dependencies

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint src",
     "preview": "vite preview",
-    "test": "vitest run"
+    "test": "vitest run",
+    "test:stress": "vitest run tests/stress/max-concurrency.test.ts"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.12",
